Wave 31: modular chunking + generation layer